@@ -972,7 +972,7 @@ CREATING
 - createEnd;
 USING
 - (const char *)getName;
-- storeAsDataset: (const char *)name type: (const char *)type ptr: (void *)ptr;
+- storeAsDataset: (const char *)name typeName: (const char *)typeName type: (const char *)type ptr: (void *)ptr;
 - storeTypeName: (const char *)typeName;
 - storeAttribute: (const char *)attributeName value: (const char *)valueString;
 - storeObject: obj;
